force-app/main/default/objects/VS_ProjectMember__c/VS_ProjectMember__c.object-meta.xml
<CustomObject>
    <description>프로젝트 멤버를 관리하는 Obj로 해당 Obj에 등록된 인원은 프로젝트 관련 수정 가능.</description>
    <label>ProjectMember</label>
    <nameField>
        <displayFormat>PM-{00000}</displayFormat>
        <label>ProjectMember Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ProjectMembers</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>