force-app/main/default/objects/VS_ProjectMember__c/fields/isCreatable__c.field-meta.xml
<CustomField>
    <fullName>isCreatable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isCreatable</label>
    <type>Checkbox</type>
</CustomField>