force-app/main/default/objects/VS_ProjectMember__c/fields/l_Member__c.field-meta.xml
<CustomField>
    <fullName>l_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ProjectMembers</relationshipName>
    <type>Lookup</type>
</CustomField>