force-app/main/default/objects/VS_ProjectMember__c/fields/l_Project__c.field-meta.xml
<CustomField>
    <fullName>l_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>VS_Project__c</referenceTo>
    <relationshipLabel>ProjectMembers</relationshipLabel>
    <relationshipName>ProjectMembers</relationshipName>
    <type>Lookup</type>
</CustomField>