force-app/main/default/objects/VS_ProjectMember__c/fields/ProjectAccess__c.field-meta.xml
<CustomField>
    <fullName>ProjectAccess__c</fullName>
    <label>Project Access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Edit</fullName>
                <default>true</default>
                <label>Read/Write</label>
            </value>
            <value>
                <fullName>Read</fullName>
                <isActive>false</isActive>
                <label>Read Only</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>